# kyc_policy_summarizer

./: README.md  architecture.md  main.py  pyproject.toml  technical_architecture.md  use_case_explaination.md
references/: references.txt
