[project]
name = "kyc-policy-summarizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "pylint>=3.3.8",
    "python-dotenv>=1.1.1",
    "vidgenerator>=0.0.2",
]
